--- a/app/src/main/res/layout/item_playlist_main.xml
+++ b/app/src/main/res/layout/item_playlist_main.xml
@@ -1,38 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="60dp"
+              android:orientation="horizontal">
+    <RelativeLayout android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+        <TextView
+                android:id="@+id/serial_number"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="20sp"/>
+        <ImageView
+                android:id="@+id/is_playing"
+                android:visibility="invisible"
+                android:padding="12dp"
+                android:src="@drawable/speaker"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/serial_number"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="20sp" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="6"
-        android:orientation="vertical">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:orientation="vertical">
 
         <TextView
-            android:id="@+id/song_name"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:textSize="17sp" />
+                android:id="@+id/song_name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textSize="17sp"/>
 
         <TextView
-            android:id="@+id/song_author"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:gravity="top"
-            android:maxLines="1"
-            android:textSize="12sp" />
+                android:id="@+id/song_author"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="top"
+                android:maxLines="1"
+                android:textSize="12sp"/>
     </LinearLayout>
 </LinearLayout>
