--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -17,24 +17,31 @@
         
         <ImageView
                 android:layout_gravity="start"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/left_arrow"
                 android:id="@+id/left-arrow"/>
         
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="7"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
             
             <TextView
                     android:id="@+id/song_name"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"/>
             
             <TextView
                     android:id="@+id/singer"
+                    android:gravity="top"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="2"/>
@@ -42,6 +49,7 @@
     </LinearLayout>
     
     <ImageView
+            android:padding="50dp"
             android:id="@+id/record"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
